<resources>
    <string name="app_name">Bassit</string>
    <string name="facebook_app_id" translatable="false">2173976339563564</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2173976339563564</string>
    <string name="server_client_id" translatable="false">48368868344-uq272indldc87bb7nmh5u9bovn1tut8t.apps.googleusercontent.com</string>
    <string name="server_client_secret" translatable="false">t54yq_JuRr2f09zWPmnVNtlp</string>
    <string name="company_email" translatable="false">bassitapp@gmail.com</string>
    <string name="company_phone" translatable="false">0698332125</string>
    <string-array name="languages">
        <item>Arabe</item>
        <item>Français</item>
        <item>Anglais</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="adresse_compl_te">Full Address</string>
    <string name="ajout_termine">Added successfully</string>
    <string name="ajouter_un_montant">Add an amount</string>
    <string name="ajouter_une_photo"><u>Add a photo</u></string>
    <string name="albums">Albums</string>
    <string name="ancien_mot_de_passe">Old password</string>
    <string name="annuel">Yearly</string>
    <string name="appeler">Call</string>
    <string name="avec_success">with success</string>
    <string name="avis">Review</string>
    <string name="avis_supprime_avec_success">Review deleted successfully</string>
    <string name="bassit_2019_tous_droits_r_serv_s">HADRI TECHNOLOGIE © 2020, All rights reserved</string>
    <string name="benefice">Profit</string>
    <string name="benefice_par_mois">Monthly profit</string>
    <string name="benefice_par_service">Monthly profit</string>
    <string name="benefice_par_service2">Profit by service</string>
    <string name="benefice_par_service_3">| Profit (Service)</string>
    <string name="benefice_service">| Profit (Service)</string>
    <string name="benefice_service_2">Profit per service</string>
    <string name="bonus_insuff">Insufficient credit</string>
    <string name="camera">Camera</string>
    <string name="ceci_necessite_au_moins_un_plan_0">This requires at least a {0} plan</string>
    <string name="charge">Spending</string>
    <string name="charge_revenu">Spending/Income</string>
    <string name="chargement_patientez">Loading, please wait</string>
    <string name="charges">Spendings</string>
    <string name="charges_n">Spendings[...]</string>
    <string name="chat_nexiste_plus">this chat doesn\'t exist</string>
    <string name="cliquer_sur_la_carte_pour_d_terminer_votre_position">Tap on the map to select your location</string>
    <string name="cloture_echouee">Closed as failed</string>
    <string name="cloture_success">Closed as Succeeded</string>
    <string name="confirm_delete_service">Are you sure that you want to delete this service</string>
    <string name="confirmation_mot_de_passe">Password confirmation</string>
    <string name="confirmer_spp_photo">Are you sure you want to delete the selected photo</string>
    <string name="connexion">Login</string>
    <string name="conversation_signalee">Chat reported</string>
    <string name="d_signation">Name</string>
    <string name="da_vers_ccp">DA to you CCP account</string>
    <string name="da_vers_partager_et_gnagner">DA to Navigui</string>
    <string name="da_vert_votre_compte_pro">DA to you Bassit Pro account</string>
    <string name="date">Date</string>
    <string name="demande_new_cat">Request a new category</string>
    <string name="demande_success_we_will_contact_you">You request has been sent successfully</string>
    <string name="dette_mis_a_jour">Depts refreshed successfully</string>
    <string name="dettes">Depts</string>
    <string name="email">Email</string>
    <string name="en_partageant_ce_lien_vous_serez_b_n_ficier">By sharing this link, you shall earn a referencing bonus of : {0} DA, this link my expire if the service owner doesn\'t have enough credit, you shall be credited when the task succeeded between the service owner and the client. Bassit checks theses transaction to guarantee your bonus!</string>
    <string name="envoyer_un_message">Send a demand</string>
    <string name="erreur_position">Location error</string>
    <string name="error_cant_get_profile">Couldn\'t get your profile</string>
    <string name="error_invalid_date">Invalid date</string>
    <string name="error_no_email_facebook">This Facebook account doesn\'t have an email address</string>
    <string name="error_server">An error occured</string>
    <string name="est_accepte">have been accepted</string>
    <string name="est_refuse">have been refused</string>
    <string name="etes_vous_sur_de_vouloir_transferer">Are you sure you want to transfer</string>
    <string name="fail">Failed</string>
    <string name="filtre_par_mois_finance">Filter finances by month</string>
    <string name="filtre_stats_par_mois">Filter statistics by month</string>
    <string name="fini">Done</string>
    <string name="finish">Done</string>
    <string name="forget_password"><u>Forget my password</u></string>
    <string name="galerie">Gallery</string>
    <string name="global_service">Global services</string>
    <string name="impossible_de_determiner_votrez_position_ressayer">Impossible to determine you position, please  try again</string>
    <string name="interest_title">Points of interest</string>
    <string name="j_ai_pas_de_servcies_mais_je_suis_disponible_pour_faire_des_t_ches_selon_la_demande">I don\'t have services, but I can help you with daily tasks</string>
    <string name="j_offre_des_services">I have a business, and I have services to offer</string>
    <string name="je_cherche_des_services">I am looking for services</string>
    <string name="lire_la_suite"><u>Read more</u></string>
    <string name="livre_financier">Global jouranl</string>
    <string name="ma_position">My current location</string>
    <string name="mensuel">Monthly status</string>
    <string name="menu_accueil">Home</string>
    <string name="menu_bassit_pro">Bassit Pro</string>
    <string name="menu_carte">Map</string>
    <string name="menu_profil">My Account</string>
    <string name="menu_tches">Tasks</string>
    <string name="mes_finances">My finance</string>
    <string name="mes_informations">Personal information</string>
    <string name="mes_photos">Photos</string>
    <string name="message">Message</string>
    <string name="message_autorise_mais_vous_nepuvezpas_envoye">Messages  are allowed, but you can\'t send messages</string>
    <string name="message_cancel_bassit_pro">Are you sure you want to cancel your Bassit Pro account</string>
    <string name="message_cancelation_error">Couldn\'t cancel Bassit Pro account, please retry</string>
    <string name="message_confirm_password">Password not confirmed</string>
    <string name="message_email_invalid">Invalid email</string>
    <string name="message_etes_vous_sur_bloquer_les_messages">Are you sure you want to block messages with</string>
    <string name="message_etes_vous_sur_de_vouloir_verser">"Are you sure you want to send the amount of "</string>
    <string name="message_fill_required_fields">Please fill the required fields</string>
    <string name="message_image_required">You need to select at least one photo</string>
    <string name="message_less_100">The amount must be > 100 DA</string>
    <string name="message_new_categorie_demande"><u>Request a new category</u></string>
    <string name="message_personal_information_required">You need to complete you information and determine your location on the map, before creating a new service</string>
    <string name="message_registration_success">Registered successfully</string>
    <string name="messaged_erreur_connexion">Connection error, please retry</string>
    <string name="messages_erreur_connexion">Connection error, please retry</string>
    <string name="modification_terminee">Modification done</string>
    <string name="modifier">Edit</string>
    <string name="modifier_mes_informations">Edit my information</string>
    <string name="modifier_mes_photos">Edit photos</string>
    <string name="modifier_mon_profil">Edit my profile</string>
    <string name="montant">Amount</string>
    <string name="montant_invalide">Please insert a correct amount</string>
    <string name="montant_min_pg">"The lowest allowed amount is : "</string>
    <string name="mot_de_passe">Password</string>
    <string name="mot_de_passe_oubli">Forgot my password?</string>
    <string name="nom">Firstname</string>
    <string name="nom_commercial">Business name</string>
    <string name="nom_et_pr_nom_compte_ccp">Full name CCP</string>
    <string name="non_finie">Open</string>
    <string name="notez_votre_client">Rate your client</string>
    <string name="nous_appeler">Call us</string>
    <string name="nous_contacter">Contact us</string>
    <string name="nouveau_mot_de_passe">New password</string>
    <string name="nouveau_versement">New money transfer</string>
    <string name="num_ro_ccp">CCP number</string>
    <string name="ou">or</string>
    <string name="partager_et_gagner">Navigui</string>
    <string name="partager_et_gagner_ce_service">Navigui this service</string>
    <string name="partager_sur">Share at</string>
    <string name="pause_mes_services">Pause my servcies</string>
    <string name="pauser_mon_service">Pause my service</string>
    <string name="pay_bigger_amount">The payment is greater than the amount</string>
    <string name="paye">Paid</string>
    <string name="photo">Photo</string>
    <string name="photo_service">Service photo</string>
    <string name="photos">Photos</string>
    <string name="please_install_maps">Please install Google Maps</string>
    <string name="please_select">Please selected a service photo</string>
    <string name="points_d_inter_t">Points of interests</string>
    <string name="position">Location</string>
    <string name="position_automatique_gps">Automatic (GPS)</string>
    <string name="position_de_mes_services">My serviecs position</string>
    <string name="pr_nom">Lastname</string>
    <string name="quitter_bassit">Are you sure you want to close Bassit</string>
    <string name="reste_egal">Remainder =</string>
    <string name="s_inscrire">Register</string>
    <string name="succes">Success</string>
    <string name="text_about">Who are we</string>
    <string name="text_bonus">Navigui bonus</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_cloturer">Close the task</string>
    <string name="text_compte">Account</string>
    <string name="text_conditions_utilisation">Terms and Conditions</string>
    <string name="text_contact">Call us</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_instagram">Instagram</string>
    <string name="text_langues">Languages</string>
    <string name="text_logout">Logout</string>
    <string name="text_privacy">Privacy and policy</string>
    <string name="text_rate_us">Rate bassit</string>
    <string name="text_share">Share</string>
    <string name="valider">Validate</string>
    <string name="title_rimaind_service">Your clients have not recognized your services yet</string>
    <string name="rimand_service">Create one</string>
    <string name="later">Later</string>
    <string name="create_now">Create now</string>
    <string name="menu_nachr">Offers</string>
    <string name="choose_who">Choose who gets work done</string>
    <string name="commission">Commission</string>
</resources>