<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/menu_profil"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_profile" />

    <item
        android:id="@+id/navigation_offer"
        android:icon="@drawable/ic_offers"
        android:iconTint="@color/colorPrimary"
        android:title="@string/menu_nachr" />


    <item
        android:id="@+id/navigation_home"
        android:title="@string/menu_accueil"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/navigation_pro"
        android:title="@string/menu_bassit_pro"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_star_home" />

    <item
        android:id="@+id/navigation_tache"
        android:title="@string/menu_tches"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_briefcase" />


</menu>