<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/round_edge"
    android:orientation="vertical"
    tools:context=".ui.dialogs.CloturerDialogFragment">




    <LinearLayout
        android:id="@+id/l_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_who"
            android:textColor="@color/black_transparent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <EditText
            android:id="@+id/t_montant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:foregroundTint="@color/darkBlue"
            android:hint="@string/montant"
            android:inputType="numberDecimal"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/t_charge"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:foregroundTint="@color/darkBlue"
            android:hint="@string/charge"
            android:inputType="numberDecimal"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/t_payed"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:foregroundTint="@color/darkBlue"
            android:hint="@string/paye"
            android:inputType="numberDecimal"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/t_reste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_yellow"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/reste_egal"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/r_avis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:layout_marginTop="20dp"
            tools:rating="3.5" />

        <EditText
            android:id="@+id/t_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/notez_votre_client"
            android:inputType="textLongMessage"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/text_cancel"
            android:textColor="@color/color_gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b_confirmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:text="@string/text_cloturer"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
