<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_edge"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.dialogs.EvaluationDialogFragment">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mpes"
        android:gravity="center_horizontal"
        android:text="@string/title_rimaind_service"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mpes"
        android:gravity="center_horizontal"
        android:text="@string/rimand_service"
        android:textColor="@color/darkgray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/add_bnts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/b_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_button_yellow"
            android:gravity="center"
            android:text="@string/later"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/b_confirmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/create_now"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>