<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".ui.activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#F5FFFFFF"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/logo" />


            <EditText
                android:id="@+id/t_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/light"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/light"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/t_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light"
                android:ems="10"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:textColorHint="@color/light"
                android:textSize="16sp" />

            <Button
                android:id="@+id/b_connexion"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/round_button"
                android:text="@string/connexion"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/b_inscrire"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/round_button"
                android:text="@string/s_inscrire"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/b_facebook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_fb" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ou"
                    android:textColor="@color/darkgray"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="130dp"
                    tools:layout_editor_absoluteY="162dp" />

                <ImageView
                    android:id="@+id/b_google"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_gmail" />

            </LinearLayout>


            <TextView
                android:id="@+id/b_resetpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/mot_de_passe_oubli"
                android:textColor="@color/darkBlue"
                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="162dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView29"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="@string/bassit_2019_tous_droits_r_serv_s"
        android:textColor="@color/color_gray" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card"
        android:gravity="center"
        android:text="@string/text_privacy"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <include layout="@layout/loading_layout" />
</RelativeLayout>